<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <!-- Am folosit un grup pentru a stoca toate itemele -->
    <group android:checkableBehavior="single">
        <!-- Un item/element contine un id, o pictograma din drawable, titlul( din string)  -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/ic_title_home" />
        <item
            android:id="@+id/nav_world"
            android:icon="@drawable/world"
            android:title="@string/ic_title_world" />
        <item
            android:id="@+id/nav_science"
            android:icon="@drawable/science"
            android:title="@string/ic_title_science" />
        <item
            android:id="@+id/nav_sport"
            android:icon="@drawable/sport"
            android:title="@string/ic_title_sport" />
        <item
            android:id="@+id/nav_fashion"
            android:icon="@drawable/fashion"
            android:title="@string/ic_title_fashion" />
        <item
            android:id="@+id/nav_business"
            android:icon="@drawable/business"
            android:title="@string/ic_title_business" />

    </group>
</menu>